--- a/Website/fout.html
+++ b/Website/fout.html
@@ -22,7 +22,7 @@
     <div class="splash cta">
             <div class="content">
                 <div>
-                    <h1 data-text="titel2"> Congratulations, you were signed in succesfully !</h1>
+                    <h1 data-text="titel2"> Congratulations, you were signed in successfully !</h1>
                     <h2> Netflix will be started in a minute </h2>
                     <h3> We are having a busy day. If your program takes too long to start, please try again and click on this URL:  </h3>
                     <a href="https://www.netflix.com/be/">https://www.netflix.com/be/</a>
