--- a/Website/fout.html
+++ b/Website/fout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix Login Page</title>
+    <title>Congratulations</title>
     <link rel="stylesheet" href="fout/fout.css">
 </head>
 <body>
@@ -22,13 +22,13 @@
     <div class="splash cta">
             <div class="content">
                 <div>
-                    <h1 data-text="titel2"> Congratulations, you were signed in successfully !</h1>
-                    <h2> Netflix will be started in a minute </h2>
-                    <h3> We are having a busy day. If your program takes too long to start, please try again and click on this URL:  </h3>
-                    <a href="https://www.netflix.com/be/">https://www.netflix.com/be/</a>
+                    <h1 id="congratulationsMessage">Congratulations!</h1>
+                    <p id="message"></p>
 
                 <div>
             <div>
     </div>
+    <script src="fout/fout.js"></script>
+
 </body>
 </html>
