--- a/Website/login.html
+++ b/Website/login.html
@@ -1,3 +1,5 @@
+<!-- This code was developed with the assistance of AI-generated suggestions. Images and visual elements from Netflix - from https://netflix.com - were used for educational purposes. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
